fix: Fixed changing folder icon in collapsed mode, b=closes #9866, c=folders, workspaces

--- a/src/zen/folders/zen-folders.css
+++ b/src/zen/folders/zen-folders.css
@@ -263,6 +263,10 @@ zen-folder {
         transition: 0.2s scale;
         transform-origin: right bottom;
 
+        :root:not([zen-sidebar-expanded]) & {
+          transform-origin: center bottom;
+        }
+
         & image {
           fill-opacity: 0.9;
           -moz-context-properties: fill, fill-opacity;
